[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotlib"
version = "0.1.0"
description = "科学数据绘图库"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
